# rpa-core-framework

./: .gitignore  README.md  pyproject.toml
rpa_core/: __init__.py  cli.py  logger.py  maestro_log_service.py  orchestrator_logger.py  process_runner.py  settings.py
rpa_core/services/: botcity_core_service.py  botcity_web_service.py  playwright_service.py  selenium_service.py
rpa_core/templates/: bot.py.template  main_maestro.py.template  main_none.py.template  settings.ini.template  settings.py.template  workflow.py.template
tests/: conftest.py  test_cli.py  test_process_runner.py  test_services.py  test_settings.py
